--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -66,6 +66,11 @@ nav button {
   flex: 1 1 auto; /* Make buttons flexible */
 }
 
+nav button.active {
+  background-color: rgb(51, 255, 51, 1); /* Green background */
+  color: #050e04; /* Black text color */
+}
+
 @media (max-width: 768px) {
   .container {
     flex-direction: column; /* Stack buttons vertically on smaller screens */
