--- a/docs/styles/style-global.css
+++ b/docs/styles/style-global.css
@@ -45,3 +45,26 @@ p {
 strong {
   color: rgb(51, 255, 51, 0.9);
 }
+
+.terminal-warning-flex {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+@media (max-width: 600px) {
+  .terminal-warning-flex {
+    flex-direction: column;
+  }
+}
+
+.terminal-warning {
+  background: #111c10;
+  font-family: "Share Tech Mono", "Fira Mono", "Consolas", monospace;
+  font-size: 0.8em;
+  padding: 1em 0.5em;
+  border-radius: 4px;
+  border-left: 3px solid #33ff33;
+  letter-spacing: .1em;
+  line-height: 1.4;
+}
