--- a/docs/styles/style-legend.css
+++ b/docs/styles/style-legend.css
@@ -1,6 +1,6 @@
 .legend-details-row {
   display: none;
-  background: #050e04;
+  background: rgb(51, 255, 51, 0.1);
   color: rgb(51, 255, 51, 1);
   width: 100%;
   padding: 0.5rem;
