Print friendly styling.

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -3,6 +3,7 @@
 @import url("./style-table.css");
 @import url("./style-legend.css");
 @import url("./style-layout.css");
+@import url("./style-print.css");
 
 * {
   margin: 0;
