--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -4,6 +4,7 @@
 @import url("./style-legend.css");
 @import url("./style-layout.css");
 @import url("./style-print.css");
+@import url("./style-colors.css");
 
 * {
   margin: 0;
@@ -16,4 +17,39 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Share Tech Mono", monospace;
+  /* letter-spacing: 0.08em; */
+  background: var(--background-color);
+  color: var(--text-color);
+}
+
+.background {
+  background: var(--background-color);
+}
+
+
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 1px solid var(--accent-color);
+  padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
+  flex-wrap: wrap;
+}
+
+nav button {
+  background: none;
+  border: none;
+  color: var(--accent-color);
+  font-size: 1.6rem;
+  font-weight: bold;
+  cursor: pointer;
+  text-shadow: 0 0 5px var(--accent-color);
+  margin: 0.5rem;
+  flex: 1 1 auto;
+}
+
+nav button.active {
+  background-color: var(--accent-color);
+  color: var(--accent-color-dark);
 }
