--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -5,6 +5,8 @@
 @import url("./style-layout.css");
 @import url("./style-print.css");
 @import url("./style-colors.css");
+@import url("./style-prizes.css");
+
 
 * {
   margin: 0;
